--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,3 +6,7 @@ services:
       dockerfile: Dockerfile
     ports:
       - "8080:8080"
+    volumes:
+      # Mounted app and error logs
+      - ./logs/app.log:./logs/app.log
+      - ./logs/error.log:./logs/error.log
