log rotation and docker recycle

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 APP_NAME=goapp
-APP_ROOT=.
 ENV=development
 PORT=8080
+PROJECT_ROOT=/Users/PeterWBryant/Repos/go-template
+ENV_PATH=/Users/PeterWBryant/Repos/go-template/.env
