--- a/.env-temp
+++ b/.env-temp
@@ -1,1 +1,5 @@
-ENV=
+APP_NAME=goapp
+ENV=development
+PORT=8080
+PROJECT_ROOT=<path-to-go-template>/go-template
+ENV_PATH=<path-to-go-template>/go-template/.env
