exported project root, log file path and env

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 APP_NAME=goapp
+PROJECT_ROOT=/Users/PeterWBryant/Repos/go-template
+ENV_PATH=${PROJECT_ROOT}/.env
+LOG_DIR_PATH=${PROJECT_ROOT}/logs
 ENV=development
 PORT=8080
-PROJECT_ROOT=/Users/PeterWBryant/Repos/go-template
-ENV_PATH=/Users/PeterWBryant/Repos/go-template/.env
