--- a/.env-temp
+++ b/.env-temp
@@ -1,5 +1,6 @@
 APP_NAME=goapp
+PROJECT_ROOT=<path_to_go_template>/go-template
+ENV_PATH=${PROJECT_ROOT}/.env
+LOG_DIR_PATH=${PROJECT_ROOT}/logs
 ENV=development
 PORT=8080
-PROJECT_ROOT=<path-to-go-template>/go-template
-ENV_PATH=<path-to-go-template>/go-template/.env
