--- a/.env-temp
+++ b/.env-temp
@@ -1,6 +1,7 @@
 APP_NAME=goapp
-PROJECT_ROOT=<path_to_go_template>/go-template
+PROJECT_ROOT=/Users/PeterWBryant/Repos/go-template
 ENV_PATH=${PROJECT_ROOT}/.env
 LOG_DIR_PATH=${PROJECT_ROOT}/logs
+CERT_DIR_PATH=${PROJECT_ROOT}/assets/certs
 ENV=development
 PORT=8080
