use envconfig instead of custom env logic

--- a/.env-temp
+++ b/.env-temp
@@ -1,7 +1,7 @@
-APP_NAME=goapp
-PROJECT_ROOT=/Users/PeterWBryant/Repos/go-template
-ENV_PATH=${PROJECT_ROOT}/.env
-LOG_DIR_PATH=${PROJECT_ROOT}/logs
-CERT_DIR_PATH=${PROJECT_ROOT}/assets/certs
-ENV=development
-PORT=8080
+GO_APP_APP_NAME=goapp
+GO_APP_PROJECT_ROOT=<full_path_to_project_root>
+GO_APP_ENV_PATH=${GO_APP_PROJECT_ROOT}/.env
+GO_APP_LOG_DIR_PATH=${GO_APP_PROJECT_ROOT}/logs
+GO_APP_CERT_DIR_PATH=${GO_APP_PROJECT_ROOT}/assets/certs
+GO_APP_ENV=development
+GO_APP_PORT=8080
