postgres config connect and migrations

--- a/.env-temp
+++ b/.env-temp
@@ -1,3 +1,4 @@
+# General
 GO_APP_APP_NAME=goapp
 GO_APP_PROJECT_ROOT=<full_path_to_project_root>
 GO_APP_ENV_PATH=${GO_APP_PROJECT_ROOT}/.env
@@ -5,3 +6,11 @@ GO_APP_LOG_DIR_PATH=${GO_APP_PROJECT_ROOT}/logs
 GO_APP_CERT_DIR_PATH=${GO_APP_PROJECT_ROOT}/assets/certs
 GO_APP_ENV=development
 GO_APP_PORT=8080
+
+# Postgres
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=yourpassword
+POSTGRES_NAME=yourdbname
+POSTGRES_SSLMODE=disable
