--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,10 @@ POSTGRES_USER=postgres
 POSTGRES_PASSWORD=yourpassword
 POSTGRES_NAME=yourdbname
 POSTGRES_SSLMODE=disable
+
+# Kafka
+KAFKA_BROKERS=localhost:9092
+KAFKA_PRODUCER_TOPIC=producer-topic
+KAFKA_CONSUMER_TOPIC=consumer-topic
+KAFKA_CONSUMER_GROUP=consumer-group
+KAFKA_CONSUMER_OFFSET=latest
