--- a/.env.example
+++ b/.env.example
@@ -1,23 +1,190 @@
-# General
-GO_APP_APP_NAME=goapp
-GO_APP_PROJECT_ROOT=<full_path_to_project_root>
-GO_APP_ENV_PATH=${GO_APP_PROJECT_ROOT}/.env
-GO_APP_LOG_DIR_PATH=${GO_APP_PROJECT_ROOT}/logs
-GO_APP_CERT_DIR_PATH=${GO_APP_PROJECT_ROOT}/assets/certs
-GO_APP_ENV=development
-GO_APP_PORT=8080
+# Environment Configuration Example
+# Copy this file to .env and adjust values for your environment
 
-# Postgres
+# Application Configuration
+APP_NAME=goapp
+APP_VERSION=v1.0.0
+APP_ENV=development
+APP_DEBUG=true
+APP_PORT=8080
+APP_HOST=localhost
+
+# Project Paths
+PROJECT_ROOT=/path/to/your/project
+ENV_PATH=${PROJECT_ROOT}/.env
+LOG_DIR_PATH=${PROJECT_ROOT}/logs
+CERT_DIR_PATH=${PROJECT_ROOT}/assets/certs
+
+# Database Configuration - PostgreSQL
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 POSTGRES_USER=postgres
-POSTGRES_PASSWORD=yourpassword
-POSTGRES_NAME=yourdbname
+POSTGRES_PASSWORD=your_secure_password
+POSTGRES_NAME=goapp_db
 POSTGRES_SSLMODE=disable
+POSTGRES_MAX_OPEN_CONNS=25
+POSTGRES_MAX_IDLE_CONNS=5
+POSTGRES_CONN_MAX_LIFETIME=5
 
-# Kafka
+# Database Configuration - SQL Server (if using)
+SQLSERVER_HOST=localhost
+SQLSERVER_PORT=1433
+SQLSERVER_USER=sa
+SQLSERVER_PASSWORD=your_secure_password
+SQLSERVER_NAME=goapp_db
+SQLSERVER_ENCRYPT=false
+SQLSERVER_TRUST_CERT=true
+
+# Kafka Configuration
 KAFKA_BROKERS=localhost:9092
 KAFKA_PRODUCER_TOPIC=producer-topic
 KAFKA_CONSUMER_TOPIC=consumer-topic
 KAFKA_CONSUMER_GROUP=consumer-group
 KAFKA_CONSUMER_OFFSET=latest
+KAFKA_AUTO_OFFSET_RESET=earliest
+KAFKA_SESSION_TIMEOUT=30s
+KAFKA_HEARTBEAT_INTERVAL=3s
+
+# Observability Configuration
+OTEL_SERVICE_NAME=goapp
+OTEL_SERVICE_VERSION=v1.0.0
+OTEL_ENVIRONMENT=development
+OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4317
+OTEL_RESOURCE_ATTRIBUTES=service.name=goapp,service.version=v1.0.0
+
+# Logging Configuration
+LOG_LEVEL=info
+LOG_FORMAT=json
+LOG_OUTPUT=stdout
+LOG_FILE_PATH=${LOG_DIR_PATH}/app.log
+LOG_WRITE_STDOUT=true
+LOG_WRITE_FILE=false
+LOG_MAX_SIZE=100
+LOG_MAX_BACKUPS=3
+LOG_MAX_AGE=28
+LOG_COMPRESS=true
+
+# HTTP Client Configuration
+HTTP_TIMEOUT=30s
+HTTP_DIAL_TIMEOUT=10s
+HTTP_TLS_TIMEOUT=10s
+HTTP_MAX_IDLE_CONNS=100
+HTTP_MAX_IDLE_CONNS_PER_HOST=10
+HTTP_IDLE_CONN_TIMEOUT=90s
+HTTP_INSECURE_SKIP_VERIFY=false
+HTTP_PROXY_URL=
+HTTP_MAX_RETRIES=3
+HTTP_RETRY_WAIT_MIN=1s
+HTTP_RETRY_WAIT_MAX=30s
+HTTP_USER_AGENT=goapp/1.0
+HTTP_CERT_FILE=
+HTTP_KEY_FILE=
+
+# Security Configuration
+JWT_SECRET=your_jwt_secret_key_here_minimum_32_characters
+JWT_EXPIRATION=24h
+BCRYPT_COST=12
+CORS_ALLOWED_ORIGINS=*
+CORS_ALLOWED_METHODS=GET,POST,PUT,DELETE,OPTIONS
+CORS_ALLOWED_HEADERS=*
+CORS_ALLOW_CREDENTIALS=true
+CORS_MAX_AGE=86400
+
+# External API Configuration
+EXTERNAL_API_BASE_URL=https://api.example.com
+EXTERNAL_API_KEY=your_api_key_here
+EXTERNAL_API_TIMEOUT=30s
+EXTERNAL_API_RETRIES=3
+
+# Monitoring Configuration
+PROMETHEUS_PORT=2112
+PROMETHEUS_PATH=/metrics
+HEALTH_CHECK_PATH=/health
+READINESS_CHECK_PATH=/ready
+METRICS_ENABLED=true
+TRACING_ENABLED=true
+PROFILING_ENABLED=false
+
+# Development Configuration
+DEV_AUTO_MIGRATE=true
+DEV_SEED_DATA=true
+DEV_CORS_ENABLED=true
+DEV_CORS_ORIGINS=http://localhost:3000,http://localhost:8080
+DEV_RELOAD_ENABLED=true
+DEV_DEBUG_ENABLED=true
+
+# Testing Configuration
+TEST_DB_HOST=localhost
+TEST_DB_PORT=5433
+TEST_DB_NAME=goapp_test_db
+TEST_DB_USER=goapp_test_user
+TEST_DB_PASSWORD=test_password
+TEST_PARALLEL=4
+TEST_TIMEOUT=30m
+TEST_COVERAGE_THRESHOLD=80
+
+# Docker Configuration
+DOCKER_REGISTRY=ghcr.io
+DOCKER_IMAGE_NAME=goapp
+DOCKER_TAG=latest
+DOCKER_BUILD_TARGET=production
+DOCKER_HEALTH_CHECK_INTERVAL=30s
+DOCKER_HEALTH_CHECK_TIMEOUT=10s
+DOCKER_HEALTH_CHECK_RETRIES=3
+
+# CI/CD Configuration
+CI_REGISTRY=ghcr.io
+CI_REGISTRY_IMAGE=ghcr.io/username/goapp
+CI_COMMIT_REF_NAME=main
+CI_COMMIT_SHA=abcd1234
+CI_PIPELINE_ID=12345
+CI_JOB_ID=67890
+
+# Redis Configuration (if using Redis)
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
+REDIS_DB=0
+REDIS_MAX_RETRIES=3
+REDIS_DIAL_TIMEOUT=5s
+REDIS_READ_TIMEOUT=3s
+REDIS_WRITE_TIMEOUT=3s
+REDIS_POOL_SIZE=10
+REDIS_MIN_IDLE_CONNS=5
+
+# Rate Limiting Configuration
+RATE_LIMIT_ENABLED=true
+RATE_LIMIT_REQUESTS_PER_MINUTE=60
+RATE_LIMIT_BURST=10
+RATE_LIMIT_CLEANUP_INTERVAL=60s
+
+# Feature Flags
+FEATURE_METRICS_ENABLED=true
+FEATURE_TRACING_ENABLED=true
+FEATURE_PROFILING_ENABLED=false
+FEATURE_SWAGGER_ENABLED=true
+FEATURE_DEBUG_ENDPOINTS=false
+
+# TLS Configuration
+TLS_ENABLED=false
+TLS_CERT_FILE=${CERT_DIR_PATH}/server.crt
+TLS_KEY_FILE=${CERT_DIR_PATH}/server.key
+TLS_CA_FILE=${CERT_DIR_PATH}/ca.crt
+TLS_MIN_VERSION=1.2
+TLS_MAX_VERSION=1.3
+
+# Backup Configuration
+BACKUP_ENABLED=false
+BACKUP_SCHEDULE=0 2 * * *
+BACKUP_RETENTION_DAYS=30
+BACKUP_S3_BUCKET=goapp-backups
+BACKUP_S3_REGION=us-east-1
+
+# Legacy Environment Variables (maintained for compatibility)
+GO_APP_APP_NAME=${APP_NAME}
+GO_APP_PROJECT_ROOT=${PROJECT_ROOT}
+GO_APP_ENV_PATH=${ENV_PATH}
+GO_APP_LOG_DIR_PATH=${LOG_DIR_PATH}
+GO_APP_CERT_DIR_PATH=${CERT_DIR_PATH}
+GO_APP_ENV=${APP_ENV}
+GO_APP_PORT=${APP_PORT}
